--- a/index.html
+++ b/index.html
@@ -19,37 +19,34 @@
             <li>3 tablespoons fish sauce <img src="./assets/3 tablespoons fish sauce.jpg" height="101" width="101" alt=""> </li><hr>
             <li>2 tablespoons light brown sugar <img src="./assets/2 tablespoons packed light brown sugar.jpg" height="81" width="81" alt=""> </li><hr>
             <li>4 tablespoons peanut oil <img src="./assets/4 tablespoons peanut oil.jpg" width="101" alt=""> </li><hr><br><br>
-
+            <li>1/4 pound green beans, split lengthwise and cut into pieces <br> <img src="./assets/green bean_split lengthwise and cut into pieces.jpg" height="101" width="101" alt="green beans"> </li><hr>
         </ul>
     </i></h1>
 
     <h4>Description : - </h4>
     <p>
-        Place the pork in the freezer about 10 minutes to make it easier to slice. 
-        Soak the noodles in very hot water until just tender, about 10 minutes; drain. 
-        Snip the noodles with scissors into shorter lengths.
-        Cut the frozen pork crosswise into 1/4-inch-wide strips.
-
-        Puree the cilantro, lime zest and juice, ginger, garlic, jalapenos, shallots, fish sauce,
-        brown sugar and 1 tablespoon water in a food processor until smooth, 
-        scraping down the processor as needed.
-
-        Heat 3 tablespoons peanut oil in a large skillet over high heat.
-        Add half the cilantro mixture and stir-fry 1 minute. 
-        Add the pork and stir-fry until no longer pink, 2 to 3 minutes. 
-        Transfer the pork with a slotted spoon to a plate.
-
-        Add the remaining 1 tablespoon peanut oil to the skillet; add the green beans and stir-fry until tender,
-        4 to 5 minutes.
-
-        Add the noodles, pork and 2 tablespoons of the remaining cilantro mixture. 
-        Cook, tossing with tongs, until heated through, about 2 minutes. 
-        Stir in the remaining cilantro mixture to taste.
+        <ol>
+            <li>Place the pork in the freezer about 10 minutes to make it easier to slice.</li><br>
+            <li>Soak the noodles in very hot water until just tender, about 10 minutes; drain.</li><br>
+            <li>Snip the noodles with scissors into shorter lengths.</li><br>
+            <li>Cut the frozen pork crosswise into 1/4-inch-wide strips.</li><br>
+            <li>Puree the cilantro, lime zest and juice, ginger, garlic, jalapenos, shallots, fish sauce,
+                brown sugar and 1 tablespoon water in a food processor until smooth, 
+                scraping down the processor as needed.
+            </li><br>
+            <li>Heat 3 tablespoons peanut oil in a large skillet over high heat.</li><br>
+            <li>Add half the cilantro mixture and stir-fry 1 minute.</li><br>
+            <li>Add the pork and stir-fry until no longer pink, 2 to 3 minutes.</li><br>
+            <li>Transfer the pork with a slotted spoon to a plate.</li><br>
+            <li>Add the remaining 1 tablespoon peanut oil to the skillet; add the green beans and stir-fry until tender,
+                4 to 5 minutes.
+            </li><br>
+            <li>Add the noodles, pork and 2 tablespoons of the remaining cilantro mixture.</li><br>
+            <li>Cook, tossing with tongs, until heated through, about 2 minutes.</li><br>
+            <li>Stir in the remaining cilantro mixture to taste.</li><br>
+        </ol>
     </p><br><hr>
     <img src="./assets/pork_noodles_image.jpeg" alt="pork_noodles"> <br>
-    <p style="font-size:100px">&#129409;</p>
-<p>I will display &#129409;</p>
-<p>I will display &#x1F981;</p>
 
 </body>
 </html>
