--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thai pork Noodles</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fuggles&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1><i> &#127836; Thai Pork && Noodles Recipe &#127836; <hr><hr>
-        <ul>
+        <ul id="recipe">
             <li>1 pound thin boneless pork chops, fat trimmed <br> <img src="./assets/raw_pork_julienne.jpg" height="101" alt=""></li><hr>
             <li>8 ounces wide Thai rice noodles <br> <img src="./assets/Flat-Rice-Noodle.jpg" height="101" alt=""></li><hr>
             <li>1 cup fresh cilantro (leaves and stems) <br> <img src="./assets/cilantro.jpg" height="101"></li><hr>
@@ -25,7 +32,7 @@
 
     <h4>Description : - </h4>
     <p>
-        <ol>
+        <ol id="desc">
             <li>Place the pork in the freezer about 10 minutes to make it easier to slice.</li><br>
             <li>Soak the noodles in very hot water until just tender, about 10 minutes; drain.</li><br>
             <li>Snip the noodles with scissors into shorter lengths.</li><br>
