--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <li>Stir in the remaining cilantro mixture to taste.</li><br>
         </ol>
     </p><br><hr>
-    <img src="./assets/pork_noodles_image.jpeg" alt="pork_noodles"> <br>
+    <img src="./assets/pork_noodles_image.jpeg" alt="pork_noodles" style="height: 3in; width: 3in;"> <br>
 
 </body>
 </html>
